<?xml version="1.0" encoding="utf-8"?><PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">    <EditTextPreference        android:defaultValue="transport.demo.sqiwy.com"        android:dialogTitle="@string/pref_server_address_title"        android:key="pref_server_address"        android:title="@string/pref_server_address_title" />    <EditTextPreference        android:dialogTitle="@string/pref_device_number_title"        android:key="pref_device_number"        android:title="@string/pref_device_number_title" />                <CheckBoxPreference        android:key="pref_demo_mode"        android:title="@string/pref_demo_mode_title"        android:defaultValue="false" />        <CheckBoxPreference        android:key="pref_map_only"        android:title="@string/pref_map_only_title"        android:defaultValue="false" />        <EditTextPreference        android:defaultValue="5"        android:dialogTitle="@string/pref_pause_title"        android:key="pref_pause"        android:title="@string/pref_pause_title" />        <EditTextPreference        android:defaultValue="5"        android:dialogTitle="@string/pref_send_interval_title"        android:key="pref_send_interval"        android:title="@string/pref_send_interval_title" /></PreferenceScreen>